--- a/frontend/src/app/layout/sales/add-sales/add-sales.component.scss
+++ b/frontend/src/app/layout/sales/add-sales/add-sales.component.scss
@@ -17,7 +17,8 @@
 
         mat-form-field {
             margin: 0 15px 0 15px;
-            width: 160px;
+            width: 200px;
+            font-size: 14px;
         }
     }
 
