--- a/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.scss
+++ b/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
-    .mat-dialog-title {
+l    .mat-dialog-title {
         margin: 5px 0 0  0;
         display: block;
     }
@@ -102,4 +102,7 @@ table {
     bottom: 45px;
     float: right;
     right: 30px;
+}
+.inline-loader{
+    color: white;
 }
