--- a/frontend/src/app/layout/sales-quotation/move-sales/move-sales.component.html
+++ b/frontend/src/app/layout/sales-quotation/move-sales/move-sales.component.html
@@ -6,24 +6,24 @@
 </div>
 <mat-divider></mat-divider>
 <br>
-    <div >
-            <div>
-                <mat-form-field class="margin field-width">
-                    <mat-label>Select Customer</mat-label>
-                    <mat-select name="tier"  [(ngModel)]="customer">
-                        <mat-option value="" >All Customer</mat-option>
-                        <mat-option *ngFor="let customer of customers" [value]="customer.company"
-                       >
-                            {{customer.company | uppercase}}
-                        </mat-option>
-                    </mat-select>
-                    <mat-spinner class="selectCustomerLoader" *ngIf="selectCustomerLoader" diameter="20"></mat-spinner>
-                </mat-form-field>
-            </div>
-        <div>
-            <button mat-raised-button color="primary" (click)="saveSalesQuotation()">
-                Submit
-                <mat-spinner *ngIf="!isShowLoader" class="inline-loader" diameter="20"></mat-spinner>
-            </button>
-        </div>
+<form [formGroup]="formGroup">
+    <div>
+        <mat-form-field class="margin field-width">
+            <mat-label>Select Customer</mat-label>
+            <mat-select name="tier" formControlName="customer_name" [(ngModel)]="customer">
+                <mat-option value="">All Customer</mat-option>
+                <mat-option *ngFor="let customer of customers" [value]="customer.company">
+                    {{customer.company | uppercase}}
+                </mat-option>
+            </mat-select>
+            <mat-spinner class="selectCustomerLoader" *ngIf="selectCustomerLoader" diameter="20"></mat-spinner>
+        </mat-form-field>
     </div>
+    <div>
+        <button mat-raised-button color="primary" [disabled]="!formGroup.valid || isShowLoader "
+            (click)="saveSalesQuotation()">
+            Submit
+            <mat-spinner *ngIf="isShowLoader" class="inline-loader" diameter="20"></mat-spinner>
+        </button>
+    </div>
+</form>
