--- a/frontend/src/app/layout/sales/sales.component.html
+++ b/frontend/src/app/layout/sales/sales.component.html
@@ -74,14 +74,14 @@
             <ng-container matColumnDef="pd">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>PD</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.last_due | currency: 'INR' }}
+                    {{ element.pending_due | currency: 'INR' }}
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="total">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Total</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.grand_total | currency: 'INR'}}
+                    {{  element.amount_pd_total   | currency: 'INR'}}
                 </td>
             </ng-container>
 
@@ -134,7 +134,7 @@
                 <th mat-header-cell *matHeaderCellDef>Print</th>
                 <td mat-cell *matCellDef="let element">
                     <button mat-icon-button matTooltip="Click to PRINT" color="primary" type="button"
-                        (click)="onEditNewCustomers(element)">
+                        (click)="print(element)">
                         <mat-icon aria-label="print" color="primary">print</mat-icon>
                     </button>
 
