--- a/frontend/src/app/layout/sales-quotation/print/print.component.html
+++ b/frontend/src/app/layout/sales-quotation/print/print.component.html
@@ -1,5 +1,5 @@
 <div class="main-header">
-    <h1 mat-dialog-title><b> Move to Sales</b> </h1>
+    <h1 mat-dialog-title><b>Print</b> </h1>
     <button mat-button mat-dialog-close>
         <mat-icon>close</mat-icon>
     </button>
