--- a/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
@@ -50,7 +50,7 @@
                 <ng-container matColumnDef="date">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
                     <td mat-cell *matCellDef="let element">
-                        {{ element.date | date: 'dd/mm/yyyy' }}
+                        {{ element.date | date: 'MMM d, y, h:mm:ss' }}
                     </td>
                 </ng-container>
                 <ng-container matColumnDef="remarks">
