--- a/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
@@ -100,10 +100,10 @@
                             (click)="onEditNewCustomers(element)">
                             <mat-icon aria-label="Edit">edit</mat-icon>
                         </button>
-                        <!-- <button mat-icon-button matTooltip="Click to Delete" color="warn"
+                       <button mat-icon-button matTooltip="Click to Delete" color="warn"
                         (click)="confirmDialog(element.id)">
                         <mat-icon aria-label="Delete">delete</mat-icon>
-                    </button> -->
+                    </button>
                     </td>
                 </ng-container>
                 <ng-container matColumnDef="print">
