--- a/frontend/src/app/layout/sales-quotation/delete-quotation/delete-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/delete-quotation/delete-quotation.component.html
@@ -1,6 +1,5 @@
-<h1 mat-dialog-title>Confirm</h1>
+<h1 mat-dialog-title><b>Delete Confirm</b></h1>
 <mat-divider></mat-divider>
-<br>
 <div mat-dialog-content>
     <p>Are you sure you want to delete?</p>
 </div>
