--- a/frontend/src/app/layout/sales/sales.component.scss
+++ b/frontend/src/app/layout/sales/sales.component.scss
@@ -42,6 +42,11 @@ table {
     justify-content: space-between;
 }
 
+tr.mat-header-row,
+tr.mat-row {
+    height: 40px;
+}
+
 th {
     color: rgb(0, 0, 0);
     font-size: 15px;
