--- a/frontend/src/app/layout/cdf/cdf-to-customers/cdf-to-customers.component.html
+++ b/frontend/src/app/layout/cdf/cdf-to-customers/cdf-to-customers.component.html
@@ -104,8 +104,8 @@
               <div class="block">
                 <mat-form-field>
                     <mat-label>Select Tier</mat-label>
-                    <mat-select formControlName="tier" name="tier" required>
-                        <mat-option *ngFor="let tire of tires" [value]="tire.id">
+                    <mat-select formControlName="tier" name="tier"  required>
+                        <mat-option *ngFor="let tire of tiers"  [value]="tire.id" (click)="findTierName(tire.id)">
                             {{tire.code}}
                         </mat-option>
                     </mat-select>
