--- a/frontend/src/app/layout/sales/add-sales/add-sales.component.html
+++ b/frontend/src/app/layout/sales/add-sales/add-sales.component.html
@@ -288,7 +288,7 @@
     </div>
     <mat-divider></mat-divider>
     <div class="flex tierLimitAndButton">
-        <div><br>({{tier}}) Due Limit:
+        <div><br><b>{{tier}}</b> Due Limit:
             <span class="error">
                 {{this.dueLimit | currency: 'INR'}}
             </span>
