--- a/frontend/src/app/layout/sales/sales.component.html
+++ b/frontend/src/app/layout/sales/sales.component.html
@@ -88,13 +88,13 @@
             <ng-container matColumnDef="payment">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Payment</th>
                 <td mat-cell *matCellDef="let element">{{ element.payment ? (element.payment | currency: 'INR') :
-                    payment | currency: 'INR'}}</td>
+                    0 | currency: 'INR'}}</td>
             </ng-container>
 
 
             <ng-container matColumnDef="td">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>TD</th>
-                <td mat-cell *matCellDef="let element">{{ element.total_due | currency: 'INR'}}</td>
+                <td mat-cell *matCellDef="let element">{{   element.total_due | currency: 'INR'}}</td>
             </ng-container>
 
             <ng-container matColumnDef="op">
@@ -116,10 +116,10 @@
                         (click)="onEditNewCustomers(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
-                    <button mat-icon-button matTooltip="Click to Delete" color="warn"
-                        (click)="confirmDialog(element.id)">
-                        <mat-icon aria-label="Delete">delete</mat-icon>
-                    </button>
+                    <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"
+                    color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
+                    <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
+                </button>
                     <button mat-icon-button matTooltip="Click to thumb" color="primary" type="button"
                         (click)="onEditNewCustomers(element)">
                         <mat-icon aria-label="like">thumb_up</mat-icon>
