--- a/frontend/src/app/layout/sales/sales.component.html
+++ b/frontend/src/app/layout/sales/sales.component.html
@@ -48,7 +48,7 @@
             <ng-container matColumnDef="t">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>T</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.t}}
+                    {{ element.token}}
                 </td>
             </ng-container>
 
