--- a/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.scss
+++ b/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.scss
@@ -1,15 +1,15 @@
 .main-header{
     display: flex;
     justify-content: space-between;
-    margin-bottom: 10px;
+    // margin-bottom: 10px;
     font-size: 14px;
 l    .mat-dialog-title {
-        margin: 5px 0 0  0;
+ //       margin: 5px 0 0  0;
         display: block;
     }
     .mat-button {
         min-width: 40px;
-        padding: 0 10px;
+      //  padding: 0 5px;
     }
 }
 .item-form {
